@@ -20,13 +20,27 @@ use lib "$FindBin::Bin/exe/lib";
   my $exe_dir = 't/.spvm_build/work/exe';
   mkpath $exe_dir;
   
-  my $spvmcc_cmd = "$^X -Mblib blib/script/spvmcc -B t/exe/.spvm_build -I t/exe/lib -o t/.spvm_build/work/exe/myexe MyExe";
-  system($spvmcc_cmd) == 0
-    or die "Can't execute spvmcc command $spvmcc_cmd:$!";
+  # Basic
+  {
+    my $spvmcc_cmd = qq($^X -Mblib blib/script/spvmcc -B t/exe/.spvm_build -I t/exe/lib -o t/.spvm_build/work/exe/myexe MyExe);
+    system($spvmcc_cmd) == 0
+      or die "Can't execute spvmcc command $spvmcc_cmd:$!";
 
-  my $execute_cmd = File::Spec->catfile(qw/t .spvm_build work exe myexe/);
-  system($execute_cmd) == 0
-    or die "Can't execute exe file $execute_cmd:$!";
+    my $execute_cmd = File::Spec->catfile(qw/t .spvm_build work exe myexe/);
+    system($execute_cmd) == 0
+      or die "Can't execute exe file $execute_cmd:$!";
+  }
+  
+  # -O option
+  {
+    my $spvmcc_cmd = qq($^X -Mblib blib/script/spvmcc -O="-O0" -B t/exe/.spvm_build -I t/exe/lib -o t/.spvm_build/work/exe/myexe MyExe);
+    system($spvmcc_cmd) == 0
+      or die "Can't execute spvmcc command $spvmcc_cmd:$!";
+
+    my $execute_cmd = File::Spec->catfile(qw/t .spvm_build work exe myexe/);
+    system($execute_cmd) == 0
+      or die "Can't execute exe file $execute_cmd:$!";
+  }
 }
 
 ok(1);
